[gd_scene load_steps=7 format=3 uid="uid://cou730wy3mjkc"]

[ext_resource type="Script" path="res://Scenes/guide.gd" id="1_tqnxm"]
[ext_resource type="Texture2D" uid="uid://b77qaq3q1k7k0" path="res://Art/back button.png" id="2_u7rq8"]
[ext_resource type="Texture2D" uid="uid://bt62g5su23u6n" path="res://Art/guide.png" id="3_eln1j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y1n22"]
atlas = ExtResource("2_u7rq8")
region = Rect2(0, 0, 275, 175)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbodo"]
atlas = ExtResource("2_u7rq8")
region = Rect2(0, 175, 275, 175)

[sub_resource type="SpriteFrames" id="SpriteFrames_k22ri"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1n22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbodo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Guide" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tqnxm")

[node name="TwoPlayer2" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 52.0
offset_right = 208.0
offset_bottom = 117.0
text = "PLAY"
flat = true

[node name="buttonPlay" type="AnimatedSprite2D" parent="TwoPlayer2"]
position = Vector2(93, 40)
sprite_frames = SubResource("SpriteFrames_k22ri")
frame_progress = 0.0888871

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(686, 383)
scale = Vector2(0.710417, 0.712963)
texture = ExtResource("3_eln1j")

[connection signal="button_down" from="TwoPlayer2" to="." method="_on_two_player_2_button_down"]
[connection signal="button_up" from="TwoPlayer2" to="." method="start_button_up"]
[connection signal="pressed" from="TwoPlayer2" to="." method="start_pressed"]
